<resources>
    <string name="app_name">Caravan Journal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="location">Locations</string>
    <string name="persona_non_grata">Persona non grata</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="logout">LogOut</string>
    <string name="caravan_journal">Caravan Journal</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="city">city</string>
    <string name="date">date</string>
    <string name="newlocation">New Location</string>
    <string name="newpersonanongratalocation">New Persona Non Grata Location</string>
    <string name="location_name">Location name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="youhavetowritealocationname">You have to write a location name!</string>
    <string name="locationcreated">Location Created.</string>
    <string name="thislocationalreadyexist">This location already exists.</string>
    <string name="youdonthaveahistoryinthislocation">You don´t have a history in this location!</string>
    <string name="tell_us_what_happened">Tell us what happened...</string>
    <string name="writesomethingtobepersonanongrata">Write something that happened in this location so it be Persona Non Grata</string>
    <string name="descriptionofpersonanongratacreated">Description of Persona Non Grata Created!</string>
    <string name="description">Description</string>
    <string name="selectanimagefirst">Select an image first.</string>
    <string name="writeadescriptionfirst">Write a description first.</string>
    <string name="newhistorycreated">New history created.</string>
    <string name="addimages">Add Images</string>
    <string name="viewfullimages">View Full Images</string>
    <string name="deletehistory">Delete history</string>
    <string name="chooseanoption">Choose an option:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletelocation">Delete location</string>
    <string name="deletethislocation">Do you realy want to delete this location?</string>
    <string name="removethishistory">Do you realy want to delete this history?</string>
    <string name="edit">Edit</string>
    <string name="editnewhistory">Edit/New History</string>
    <string name="edithistory">Edit history</string>
    <string name="newhistory">New history</string>
    <string name="creator">Witness:&#160;&#160;&#160;</string>
    <string name="creator_name">Witness Name</string>
    <string name="if_you_like_my_work_please_help_with_a_donation">If you like my work please help with a donation.</string>
    <string name="all_my_work_are_in_github">All my work are in GitHub</string>
</resources>