<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cityname_personanongrata_object"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/city"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:maxLines="5"
                android:textColor="@color/colorWhite"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/creator"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhiteGray"/>
                <TextView
                    android:id="@+id/creatorname_personanongrata_object"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/creator_name"
                    android:textSize="13sp"
                    android:maxLines="5"
                    android:textColor="@color/colorWhiteGray"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>