<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/image_history_object"
                android:layout_width="match_parent"
                app:showTopShadow="false"
                app:showBottomShadow="false"
                app:imagePlaceholder="@drawable/imagenotfound"
                app:autoPlay="true"
                app:autoPlayDelay="5000"
                android:layout_height="250dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryVariant"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/cityname_history_object"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:maxLines="1"
                    android:text="@string/city"
                    android:layout_marginStart="7dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date__history_object"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="end|bottom"
                    android:maxLines="5"
                    android:layout_marginEnd="7dp"
                    android:text="@string/date"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/discription_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="30"
                android:layout_margin="7dp"
                android:text="@string/description"
                android:minHeight="100dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>